--- a/components/simple_game/Sconscript
+++ b/components/simple_game/Sconscript
@@ -2,8 +2,8 @@ from pathlib import Path
 
 Import("env")
 
-SConscript('../../../components/gameboy/ui/Sconscript', exports='env')
-SConscript('../../../components/gameboy/game/Sconscript', exports='env')
+SConscript('../../components/ui/Sconscript', exports='env')
+SConscript('../../components/game/Sconscript', exports='env')
 
 env.AppendUnique(CPPPATH=Path("include").resolve())
 
