Refactor build configuration to copy the target binary to the build folder

--- a/bases/gameboy/Sconscript
+++ b/bases/gameboy/Sconscript
@@ -4,5 +4,5 @@ SConscript('../../components/game/Sconscript', exports='env')
 SConscript('../../components/simple_game/Sconscript', exports='env')
 SConscript('../../components/ui/Sconscript', exports='env')
 
-program = env.Program(target='gameboy', source=['src/main.c'])
+program = env.Program(target="target.bin", source=['src/main.c'])
 Return("program")
